Fix Blogs, WorkEX on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,9 @@ a:hover {
 .service-box,
 .work-box,
 .card-blog {
+  background-color: transparent;
+  border-radius: 30px;
+  margin-bottom: 2rem;
   box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
 }
 
